@@ -109,8 +109,8 @@ public class ItemDefinitionType extends NamedType implements CompositeDataType, 
 
     @Override
     public String toString() {
-        String members = this.members.entrySet().stream().map(e -> String.format("%s = %s", toList(e.getKey(), this.aliases.get(e.getKey())), e.getValue())).collect(Collectors.joining(", "));
-        return String.format("ItemDefinitionType(%s, %s)", name, members);
+        String members = this.members.entrySet().stream().map(e -> "%s = %s".formatted(toList(e.getKey(), this.aliases.get(e.getKey())), e.getValue())).collect(Collectors.joining(", "));
+        return "ItemDefinitionType(%s, %s)".formatted(name, members);
     }
 
     private String toList(String name, List<String> aliases) {
