@@ -54,7 +54,7 @@ public abstract class ArithmeticExpression<T> extends Expression<T> {
 
     @Override
     public String toString() {
-        return String.format("%s(%s,%s)", getClass().getSimpleName(), getLeftOperand(), getRightOperand());
+        return "%s(%s,%s)".formatted(getClass().getSimpleName(), getLeftOperand(), getRightOperand());
     }
 }
  
