@@ -27,6 +27,6 @@ public class LogicNegation<T> extends LogicExpression<T> {
 
     @Override
     public String toString() {
-        return String.format("%s(%s)", getClass().getSimpleName(), getLeftOperand());
+        return "%s(%s)".formatted(getClass().getSimpleName(), getLeftOperand());
     }
 }
