@@ -73,6 +73,6 @@ public class ForExpression<T> extends Expression<T> {
     @Override
     public String toString() {
         String iterators = this.iterators.stream().map(Iterator::toString).collect(Collectors.joining(","));
-        return String.format("%s(%s -> %s)", getClass().getSimpleName(), iterators, this.body.toString());
+        return "%s(%s -> %s)".formatted(getClass().getSimpleName(), iterators, this.body.toString());
     }
 }
