@@ -90,7 +90,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
             XStream xStream = newXStream();
             return xStream.fromXML(input);
         } catch (Exception e) {
-            LOGGER.error(String.format("Error unmarshalling DMN model from file '%s'.", input.getAbsolutePath()), e);
+            LOGGER.error("Error unmarshalling DMN model from file '%s'.".formatted(input.getAbsolutePath()), e);
         }
         return null;
     }
@@ -101,7 +101,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
             XStream xStream = newXStream();
             return xStream.fromXML(input);
         } catch (Exception e) {
-            LOGGER.error(String.format("Error unmarshalling DMN model from file '%s'.", input), e);
+            LOGGER.error("Error unmarshalling DMN model from file '%s'.".formatted(input), e);
         }
         return null;
     }
@@ -135,8 +135,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
                 CustomStaxWriter hsWriter = (CustomStaxWriter) STAX_DRIVER.createWriter(writer)) {
 
             XStream xStream = newXStream();
-            if (o instanceof TCKBaseElement) {
-                TCKBaseElement base = (TCKBaseElement) o;
+            if (o instanceof TCKBaseElement base) {
                 String dmnPrefix = base.getElementInfo().getNsContext().entrySet().stream().filter(kv -> TCKVersion.TCK_1.getNamespace().equals(kv.getValue())).findFirst().map(Map.Entry::getKey).orElse("");
                 hsWriter.getQNameMap().setDefaultPrefix(dmnPrefix);
             }
